--- a/src/webparts/addressBook1/components/AddressBook1.module.scss
+++ b/src/webparts/addressBook1/components/AddressBook1.module.scss
@@ -1,5 +1,11 @@
-@import '~@fluentui/react/dist/sass/References.scss';
 
+@import '~@fluentui/react/dist/sass/References.scss';
+:global{
+  #workbenchPageContent,
+  .CanvasComponent.LCS .CanvasZone{
+    max-width: 100% !important;
+  }
+}
 .addressBook1 {
   overflow: hidden;
   padding: 1em;
@@ -10,25 +16,10 @@
   }
 }
 
-.welcome {
-  text-align: center;
-}
 
-.welcomeImage {
-  width: 100%;
-  max-width: 420px;
-}
 
-.links {
-  a {
-    text-decoration: none;
-    color: "[theme:link, default:#03787c]";
-    color: var(--link); // note: CSS Custom Properties support is limited to modern browsers only
 
-    &:hover {
-      text-decoration: underline;
-      color: "[theme:linkHovered, default: #014446]";
-      color: var(--linkHovered); // note: CSS Custom Properties support is limited to modern browsers only
-    }
-  }
-}
+
+
+
+
