--- a/src/webparts/addressBook1/components/formpage/formpage.css
+++ b/src/webparts/addressBook1/components/formpage/formpage.css
@@ -1,7 +1,7 @@
 #formpage-container {
     width: 750px;
     height: 550px;
-    margin: 0px 200px;
+    margin: 0px 100px;
     box-shadow: 0px 0px 25px;
     padding: 5px;
     padding-left: 30px;
@@ -57,4 +57,7 @@ textarea{
 .mandatory{
     color: red;
     display: inline;
+}
+#addressLabel{
+    margin-left: 5px;
 }
